	transformation fails.

	* The message/rfc822 parser now accepts param x-strip-js to
	remove scripts from embedded HTML.

	* Error responses now include a plain-text version as a
	comment at the top. Useful if you're reading the error message
	in an HTTP analyzer.

	* Bug fix: Content-Type override did not work for http: and
	https: protocols.

	* SQL query responses now include a type attribute, which also
	indicates NULL results.

	* Added a --shell command line parameter, which starts the
	ESXX Shell.

	* The esxx-js shell wrapper now uses the client Java VM by
	default, for faster startup times. (You could also try to
	generate the shared class dump using the command
	"java -client -Xshare:dump", which might improve things
	even more.)

	* The SQL query builder now supports JS objects as parameters,
	in which case all enumberable properties will be added as a
	comma-separeted list. Very useful for queries like
	"SELECT ... WHERE IN (param)".

	* Updated the JSON classes to version 2009-09-11.

	* The URI object's toString() value now returns the URI in Unicode
	formate (like an IRI). The valueOf() function has been changed to
	return the strict US-ASCII URI string.

	* Changed the default Logger level to 'debug'.

	* GAEClientConnection.sendRequestHeader encoded the URI twice
	and did not handle the query string at all. Thanks to Thibaut
	for discovering this and suggesting a fix! [Thibaut@blogger.com]

	* load() on file: URIs now use the file extension to guess
	content type. An ESXX response handler may now also return a
	Java File object, and the file extension is used to guess
	content type.

	* JDBC auth: The correct property name is "user", not
	"username". This made the "auth" property on JDBC URIs
	useless.

	* URI auth: If username and password is supplied in the
	auth-info part, use it. Also, new matcher keys: "user-info"
	and "uri".

0.9.20090521
	* Added the XKCD example from the Wiki.

	* Fixed apps in examples to use req.scriptURI instead of the